Fix all the namespaces

--- a/k8s/influxdb/onepassworditem-influxdb-auth.yml
+++ b/k8s/influxdb/onepassworditem-influxdb-auth.yml
@@ -3,6 +3,6 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: influxdb-auth
-  namespace: platform-influxdb
+  namespace: db-influxdb
 spec:
   itemPath: "vaults/HomeLab/items/influxdb-auth"
