--- a/k8s/influxdb/ingress-homepage-dummy.yml
+++ b/k8s/influxdb/ingress-homepage-dummy.yml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: influxdb-homepage
-  namespace: platform-influxdb
+  namespace: db-influxdb
   labels:
     app.kubernetes.io/name: influxdb2
     app.kubernetes.io/component: influxdb
