what the hell man

--- a/argocd/apps/platform/netbox.yml
+++ b/argocd/apps/platform/netbox.yml
@@ -75,6 +75,7 @@ spec:
               paths:
                 - path: /
                   portName: http-auth
+                  port: 8971
           tls: []
 
   destination:
