--- a/argocd/apps/apps/frigate.yml
+++ b/argocd/apps/apps/frigate.yml
@@ -64,7 +64,7 @@ spec:
 
         ingress:
           enabled: true
-          className: ""
+          className: null
           annotations:
             gethomepage.dev/enabled: "true"
             gethomepage.dev/name: "Frigate"
@@ -75,8 +75,7 @@ spec:
             - host: frigate
               paths:
                 - path: /
-                  pathType: Prefix
-                  servicePort: 8971
+                  portName: http-auth
 
   destination:
     server: https://kubernetes.default.svc
