--- a/argocd/apps/platform/resources.yml
+++ b/argocd/apps/platform/resources.yml
@@ -16,7 +16,7 @@ spec:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: infra-ingresses
   syncPolicy:
     automated:
       prune: true
