--- a/argocd/apps/platform/resources.yml
+++ b/argocd/apps/platform/resources.yml
@@ -1,4 +1,3 @@
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -7,7 +6,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "90"
 spec:
-  project: coachlight-k3s-infra
+  project: coachlight-k3s-ingresses
   source:
     repoURL: https://github.com/SRF-Audio/utility-scripts
     targetRevision: main
