--- a/argocd/apps/platform/omada-controller.yml
+++ b/argocd/apps/platform/omada-controller.yml
@@ -16,6 +16,10 @@ spec:
       valuesObject:
         config:
           rootless: false
+          ports:
+            manageHttp: 80
+            manageHttps: 443
+          timezone: America/Chicago
         persistence:
           data:
             enabled: true
