--- a/argocd/apps/platform/omada-controller.yml
+++ b/argocd/apps/platform/omada-controller.yml
@@ -17,6 +17,10 @@ spec:
         config:
           rootless: false
           timezone: America/Chicago
+          manageHttp: 80
+          manageHttps: 443
+          portalHttp: 80
+          portalHttps: 443
         persistence:
           data:
             enabled: true
