Fix crafty link

--- a/k8s/crafty_controller/ingress.yml
+++ b/k8s/crafty_controller/ingress.yml
@@ -13,6 +13,7 @@ metadata:
     gethomepage.dev/group: "Games"
     gethomepage.dev/description: "Minecraft server manager"
     gethomepage.dev/icon: "crafty"
+    gethomepage.dev/url: "https://crafty-controller.rohu-shark.ts.net"
 spec:
   ingressClassName: tailscale
   rules:
