Update ingress again

--- a/k8s/crafty_controller/ingress.yml
+++ b/k8s/crafty_controller/ingress.yml
@@ -17,7 +17,8 @@ metadata:
 spec:
   ingressClassName: tailscale
   rules:
-    - http:
+    - host: "https://crafty-controller.rohu-shark.ts.net"
+      http:
         paths:
           - path: /
             pathType: Prefix
