--- a/k8s/crafty_controller/ingress.yml
+++ b/k8s/crafty_controller/ingress.yml
@@ -17,7 +17,7 @@ metadata:
 spec:
   ingressClassName: tailscale
   rules:
-    - host: "https://crafty-controller.rohu-shark.ts.net"
+    - host: "crafty-controller.rohu-shark.ts.net"
       http:
         paths:
           - path: /
