--- a/k8s/resources/ingresses/apps-crafty-controller/ingress-crafty-controller.yml
+++ b/k8s/resources/ingresses/apps-crafty-controller/ingress-crafty-controller.yml
@@ -20,7 +20,7 @@ spec:
     - hosts:
         - crafty-controller.rohu-shark.ts.net
   rules:
-    - host: "crafty-controller.rohu-shark.ts.net"
+    - host: crafty-controller.rohu-shark.ts.net
       http:
         paths:
           - path: /
