--- a/argocd/apps/platform/omada-controller.yml
+++ b/argocd/apps/platform/omada-controller.yml
@@ -1,45 +1,45 @@
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: omada-controller
-  namespace: argocd
-  annotations:
-    argocd.argoproj.io/sync-wave: "30"
-spec:
-  project: coachlight-k3s-infra
-  source:
-    repoURL: oci://registry-1.docker.io/mbentley/omada-controller-helm
-    chart: omada-controller
-    targetRevision: 1.0.0
-    helm:
-      valuesObject:
-        config:
-          rootless: false
-          timezone: America/Chicago
-          ports:
-            httpManage: 80
-            httpsManage: 443
-        persistence:
-          data:
-            enabled: true
-            storageClassName: "local-path-retain"
-          logs:
-            enabled: true
-            storageClassName: "local-path-retain"
+# ---
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: omada-controller
+#   namespace: argocd
+#   annotations:
+#     argocd.argoproj.io/sync-wave: "30"
+# spec:
+#   project: coachlight-k3s-infra
+#   source:
+#     repoURL: oci://registry-1.docker.io/mbentley/omada-controller-helm
+#     chart: omada-controller
+#     targetRevision: 1.0.0
+#     helm:
+#       valuesObject:
+#         config:
+#           rootless: false
+#           timezone: America/Chicago
+#           ports:
+#             httpManage: 80
+#             httpsManage: 443
+#         persistence:
+#           data:
+#             enabled: true
+#             storageClassName: "local-path-retain"
+#           logs:
+#             enabled: true
+#             storageClassName: "local-path-retain"
 
-        service:
-          type: ClusterIP
+#         service:
+#           type: ClusterIP
 
-        ingress:
-          enabled: false
+#         ingress:
+#           enabled: false
 
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: infra-omada-controller
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+#   destination:
+#     server: https://kubernetes.default.svc
+#     namespace: infra-omada-controller
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#       - CreateNamespace=true
