--- a/argocd/apps/platform/omada-controller.yml
+++ b/argocd/apps/platform/omada-controller.yml
@@ -29,7 +29,7 @@ spec:
             storageClassName: local-path-retain
 
         service:
-          type: ClusterIP
+          type: LoadBalancer
 
         ingress:
           enabled: false
