--- a/argocd/apps/apps/frigate.yml
+++ b/argocd/apps/apps/frigate.yml
@@ -19,33 +19,16 @@ spec:
             enabled: false
 
           cameras:
-            amcrest_left:
-              enabled: false
+            amcrest_basement_entrance:
+              enabled: true
               ffmpeg:
                 inputs:
-                  - path: rtsp://USERNAME:PASSWORD@CAMERA_IP:554/cam/realmonitor?channel=1&subtype=0
+                  - path: rtsp://{FRIGATE_RTSP_USERNAME}:{FRIGATE_RTSP_PASSWORD}@192.168.231.2:554/cam/realmonitor?channel=1&subtype=1
                     roles:
                       - detect
-                      - record
-              detect:
-                enabled: false
-                width: 2688
-                height: 1520
-                fps: 25
-
-            amcrest_right:
-              enabled: false
-              ffmpeg:
-                inputs:
-                  - path: rtsp://USERNAME:PASSWORD@CAMERA_IP:554/cam/realmonitor?channel=2&subtype=0
+                  - path: rtsp://{FRIGATE_RTSP_USERNAME}:{FRIGATE_RTSP_PASSWORD}@192.168.231.2:554/cam/realmonitor?channel=1&subtype=0
                     roles:
-                      - detect
                       - record
-              detect:
-                enabled: false
-                width: 2688
-                height: 1520
-                fps: 25
 
         service:
           type: ClusterIP
