--- a/argocd/apps/apps/frigate.yml
+++ b/argocd/apps/apps/frigate.yml
@@ -14,6 +14,8 @@ spec:
     targetRevision: "7.8.0"
     helm:
       valuesObject:
+        envFromSecrets:
+          - frigate-rtsp-credentials
         config: |
           mqtt:
             enabled: false
