Enhance frigate.yml with object tracking feature
Added object tracking and filtering for various animals.

--- a/argocd/apps/apps/frigate.yml
+++ b/argocd/apps/apps/frigate.yml
@@ -35,10 +35,27 @@ spec:
               retain:
                 default: 14
                 mode: active_objects
+          objects:
+            track:
+              - person
+              - dog
+              - cat
+              - bird
+            filters:
+              dog:
+                min_score: 0.5
+              cat:
+                min_score: 0.5
+              bird:
+                min_score: 0.4
 
           cameras:
             amcrest_basement_entrance:
               enabled: true
+              detect:
+                width: 1024
+                height: 452
+                fps: 10
               ffmpeg:
                 inputs:
                   - path: rtsp://127.0.0.1:8554/basement_sub
