--- a/argocd/apps/apps/frigate.yml
+++ b/argocd/apps/apps/frigate.yml
@@ -22,6 +22,10 @@ spec:
               basement_main: rtsp://{FRIGATE_RTSP_USER}:{FRIGATE_RTSP_PASSWORD}@192.168.231.2:554/cam/realmonitor?channel=1&subtype=0
               basement_sub: rtsp://{FRIGATE_RTSP_USER}:{FRIGATE_RTSP_PASSWORD}@192.168.231.2:554/cam/realmonitor?channel=1&subtype=1
 
+          detectors:
+            cpu1:
+              type: cpu
+              num_threads: 2
 
           mqtt:
             enabled: false
