--- a/argocd/apps/platform/mqtt-broker.yml
+++ b/argocd/apps/platform/mqtt-broker.yml
@@ -9,27 +9,51 @@ metadata:
 spec:
   project: coachlight-k3s-infra
   source:
-    repoURL: https://sintef.github.io/mosquitto-helm-chart
-    chart: mosquitto
-    targetRevision: 0.1.1
+    repoURL: https://bjw-s.github.io/helm-charts
+    chart: app-template
+    targetRevision: 3.7.0
     helm:
       valuesObject:
-        mqttOverWebsocket: false
-        auth:
-          usersExistingSecret: mosquitto-auth
-          users:
-            - username: admin
-              password: ""
-              acl:
-                - topic: "#"
-                  access: readwrite
-        resources:
-          requests:
-            cpu: 10m
-            memory: 32Mi
-          limits:
-            cpu: 100m
-            memory: 128Mi
+        controllers:
+          mosquitto:
+            containers:
+              app:
+                image:
+                  repository: eclipse-mosquitto
+                  tag: 2.0.20
+                resources:
+                  requests:
+                    cpu: 10m
+                    memory: 32Mi
+                  limits:
+                    cpu: 100m
+                    memory: 128Mi
+
+        service:
+          mosquitto:
+            controller: mosquitto
+            ports:
+              mqtt:
+                port: 1883
+
+        persistence:
+          data:
+            enabled: true
+            storageClass: nfs-synology-retain
+            size: 1Gi
+            globalMounts:
+              - path: /mosquitto/data
+          config:
+            type: configMap
+            name: mosquitto-config
+            globalMounts:
+              - path: /mosquitto/config/mosquitto.conf
+                subPath: mosquitto.conf
+          secret:
+            type: secret
+            name: mosquitto-auth
+            globalMounts:
+              - path: /mosquitto/secret
 
   destination:
     server: https://kubernetes.default.svc
