--- a/k8s/infra-mqtt/kustomization.yml
+++ b/k8s/infra-mqtt/kustomization.yml
@@ -4,3 +4,8 @@ kind: Kustomization
 resources:
   - namespace.yml
   - onepassword/mosquitto-auth.yml
+
+configMapGenerator:
+  - name: mosquitto-config
+    files:
+      - config/mosquitto.conf
