Change MQTT broker service type to LoadBalancer
Make load balancer service for MQTT

--- a/argocd/apps/platform/mqtt-broker.yml
+++ b/argocd/apps/platform/mqtt-broker.yml
@@ -57,9 +57,11 @@ spec:
         service:
           main:
             controller: main
+            type: LoadBalancer
             ports:
               mqtt:
                 port: 1883
+
 
         persistence:
           data:
