--- a/argocd/apps/platform/pgadmin.yml
+++ b/argocd/apps/platform/pgadmin.yml
@@ -1,4 +1,3 @@
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -12,20 +11,14 @@ spec:
     repoURL: https://helm.runix.net
     chart: pgadmin4
     targetRevision: 1.50.0
-  helm:
-    valuesObject:
-      env:
-        variables:
-          - name: PGADMIN_DEFAULT_EMAIL
-            valueFrom:
-              secretKeyRef:
-                name: pgadmin-credentials
-                key: PGADMIN_DEFAULT_EMAIL
-          - name: PGADMIN_DEFAULT_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: pgadmin-credentials
-                key: PGADMIN_DEFAULT_PASSWORD
+    helm:
+      valuesObject:
+        env:
+          email: "stephen.froeber@gmail.com"
+
+        existingSecret: pgadmin-credentials
+        secretKeys:
+          pgadminPasswordKey: PGADMIN_DEFAULT_PASSWORD
 
         persistentVolume:
           enabled: true
@@ -48,6 +41,7 @@ spec:
             memory: 512Mi
 
         containerSecurityContext:
+          enabled: true
           runAsNonRoot: true
           runAsUser: 5050
           runAsGroup: 5050
