Change Frigate to LB

--- a/argocd/apps/apps/frigate.yml
+++ b/argocd/apps/apps/frigate.yml
@@ -68,7 +68,7 @@ spec:
                     roles: [record]
 
         service:
-          type: ClusterIP
+          type: LoadBalancer
 
         persistence:
           config:
